# ensemble

./: .gitignore  CLAUDE.md  LEARNED.md  LICENSE  PLAN.md  PROGRESS.md  README.md  REFACTOR_STATUS.md  USAGE.md  ensemble-implementation-plan-v2.md  pyproject.toml
.claude/: settings.json
.claude/agents/: conductor.md  dispatch.md  integrator.md  learner.md  worker.md
.claude/commands/: deploy.md  go.md  improve.md
.claude/hooks/scripts/: check-claude-md-lines.sh  notify-error.sh  notify-stop.sh  session-scan.sh
.claude/instructions/: plan.md
.claude/rules/: agent-teams.md  communication.md  deploy.md  infrastructure.md  workflow.md
.claude/scripts/: launch.sh
.claude/skills/backend-api/: SKILL.md
.claude/skills/database-migration/: SKILL.md
.claude/skills/react-frontend/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/workflows/: worktree.yaml
.githooks/: check-claude-md.sh
.github/workflows/: ensemble-action.yml  publish.yml  test.yml
demo_api/: __init__.py  main.py  models.py
demo_api/routes/: create.py  delete.py  read.py  update.py
docs/: ARCHITECTURE.md  ensemble-design-review.md  preview-agent-teams-integration.md  research-shogun-analysis.md
docs/research/: 008-anthropic-c-compiler-article.md
notes/claude-md-split/: decisions.md  lessons.md  skill-candidates.md
notes/crud-api-demo/: decisions.md  lessons.md  skill-candidates.md
queue/ack/: .gitkeep
queue/conductor/: .gitkeep
queue/reports/: .gitkeep
queue/tasks/: .gitkeep
scripts/: launch.sh  pane-setup.sh  setup.sh  statusline.sh  update-mode.sh
src/ensemble/: __init__.py  ack.py  autonomous_loop.py  bloom.py  cli.py  config.py  dashboard.py  dependency.py  faceted.py  git_utils.py  helpers.py  inbox.py  investigator.py  issue_provider.py  lock.py  logger.py  loop_detector.py  notes.py  pipeline.py  queue.py  scanner.py  skill_discovery.py  skills.py  utils.py  version_tracker.py  workflow.py  worktree.py
status/: dashboard.md
templates/: dispatch-instruction.yaml  worker-report.yaml  worker-task.yaml
tests/: test_ack.py  test_autonomous_loop.py  test_bloom.py  test_cli.py  test_config.py  test_dashboard.py  test_dependency.py  test_faceted.py  test_faceted_prompting.py  test_git_utils.py  test_helpers.py  test_inbox.py  test_investigator.py  test_issue_command.py  test_issue_provider.py  test_launch.py  test_lock.py  test_logger.py  test_loop_detector.py  test_ndjson_logger.py  test_notes.py  test_pipeline.py  test_queue.py  test_scan_integration.py  test_scanner.py  test_setup.py  test_skill_discovery.py  test_skills.py  test_templates.py  test_upgrade.py  test_utils.py  test_workflow.py  test_worktree.py
workflows/: agent-teams.yaml  worktree.yaml
(+28 files in other folders)
